<resources>
    <string name="app_name">NaverBlog-Andoid</string>
    <string name="menu_feed">feed</string>
    <string name="menu_recommend">recommend</string>
    <string name="menu_write">write</string>
    <string name="menu_alarm">alarm</string>
    <string name="menu_profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilefragment">ProfileFragment</string>
    <string name="alarmfragment">AlarmFragment</string>
    <string name="feedfragment">FeedFragment</string>
    <string name="recommendfragment">RecommendFragment</string>
    <string name="writefragment">WriteFragment</string>
    <string name="text_comment">글 댓글</string>
    <string name="write_comment">댓글을 입력해주세요</string>
    <string name="register">등록</string>
    <string name="secret_comment">비밀 댓글</string>
    <string name="count_comment">N</string>
    <string name="dummy_name">이름</string>
    <string name="dummy_comment">댓글 자리</string>
    <string name="write_recomment">답글 달기</string>
    <string name="hide_recomment">답글 숨기기</string>
    <string name="dummy_heart_count">N</string>
    <string name="dummy_date_time">N.N.N N:N</string>
    <string name="dummy_show_recomment">답글 N개 보기</string>
    <string name="feed_today">오늘</string>
    <string name="feed_today_count">0</string>
    <string name="feed_total">전체</string>
    <string name="feed_total_count">2,807</string>
    <string name="feed_blog_name">Dear</string>
    <string name="feed_blog_username">솝트 디자인</string>
    <string name="feed_each_neighbor">서로이웃</string>
    <string name="feed_category1">일상</string>
    <string name="feed_category2">생각</string>
    <string name="feed_neighbor_num">38명의 이웃</string>
    <string name="feed_total_post">전체글</string>
    <string name="feed_posting_title">포스팅 제목</string>
    <string name="feed_posting_content">포스팅 내용</string>
    <string name="feed_posting_date">2021.2.2.</string>
    <string name="feed_posting_heart">6</string>
    <string name="feed_posting_comment">6</string>
</resources>