<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView_ic_tag_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_color_tag" />

    <TextView
        android:id="@+id/textView_re_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        tools:text="@string/dummy_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_ic_tag_color"
        app:layout_constraintStart_toEndOf="@+id/imageView_ic_tag_color"
        app:layout_constraintTop_toTopOf="@+id/imageView_ic_tag_color" />

    <TextView
        android:id="@+id/textView_re_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_comment"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView_ic_tag_color"
        app:layout_constraintTop_toBottomOf="@+id/textView_re_name" />

    <TextView
        android:id="@+id/textView_re_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"
        android:fontFamily="@font/nanum_barun_gothic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_re_comment"
        tools:text="@string/dummy_date_time" />

    <TextView
        android:id="@+id/textView_heart_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_re_comment"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_re_heart"
        app:layout_constraintTop_toTopOf="@+id/textView_re_comment"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/dummy_heart_count" />

    <ImageView
        android:id="@+id/imageButton_re_heart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView_heart_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_heart_count"
        app:srcCompat="@drawable/selector_heart_button" />

    <TextView
        android:id="@+id/textView_re_write_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/write_recomment"
        android:textColor="@color/gray_7d"
        android:textSize="11sp"
        android:fontFamily="@font/nanum_barun_gothic"
        app:layout_constraintBottom_toBottomOf="@+id/textView_re_date_time"
        app:layout_constraintStart_toEndOf="@+id/textView_re_date_time"
        app:layout_constraintTop_toTopOf="@+id/textView_re_date_time" />

    <ImageView
        android:id="@+id/imageView_isOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView_re_name"
        app:layout_constraintStart_toEndOf="@+id/textView_re_name"
        app:layout_constraintTop_toTopOf="@+id/textView_re_name"
        app:srcCompat="@drawable/btn_owner" />

</androidx.constraintlayout.widget.ConstraintLayout>