<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="25dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_name" />

    <TextView
        android:id="@+id/textView_comment"
        android:layout_width="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nanum_barun_gothic"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        tools:text="@string/dummy_comment" />

    <TextView
        android:id="@+id/textView_date_time"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_comment"
        tools:text="@string/dummy_date_time" />

    <TextView
        android:id="@+id/button_write_recomment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_full_white"
        android:fontFamily="@font/nanum_barun_gothic"
        android:layout_marginStart="7dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/write_recomment"
        android:textColor="@color/gray_7d"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_date_time"
        app:layout_constraintStart_toEndOf="@+id/textView_date_time"
        app:layout_constraintTop_toTopOf="@+id/textView_date_time" />

    <TextView
        android:id="@+id/textView_heart_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:textSize="12sp"
        android:fontFamily="@font/nanum_barun_gothic"
        app:layout_constraintBottom_toBottomOf="@+id/textView_comment"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_heart"
        app:layout_constraintTop_toTopOf="@+id/textView_comment"
        tools:text="@string/dummy_heart_count" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_fold_unfold_recomment"
        app:layout_constraintTop_toBottomOf="@+id/textView_fold_unfold_recomment"
        tools:itemCount="2"
        tools:listitem="@layout/item_recomment" />

    <TextView
        android:id="@+id/textView_fold_unfold_recomment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:background="@drawable/rectangle_full_white"
        android:fontFamily="@font/nanum_barun_gothic"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/hide_recomment"
        android:textSize="12sp"
        android:textColor="@color/gray_7d"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageButton_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_full_white"
        app:layout_constraintBottom_toBottomOf="@+id/textView_heart_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_heart_counter"

        app:srcCompat="@drawable/selector_heart_button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/rectangle_full_e0gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="29dp"
        android:layout_height="1dp"
        android:background="@drawable/rectangle_full_7dgray"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_date_time" />

    <ImageView
        android:id="@+id/imageView_ic_color_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_color_tag" />

    <ImageView
        android:id="@+id/imageView_isOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView_name"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toTopOf="@+id/textView_name"
        app:srcCompat="@drawable/btn_owner" />


</androidx.constraintlayout.widget.ConstraintLayout>