<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.comment.CommentActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:text="@string/text_comment"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/count_comment"
            android:textColor="@color/naver_green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_comment_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--recyclerviwe 공간-->


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:fillViewport="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_comment" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="409dp"
                android:layout_height="43dp"
                android:layout_marginTop="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView_comment"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView_secret_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_comment"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_scret_comment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/count_comment"
                    android:textColor="@color/gray_99"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_secret_comment"
                    app:layout_constraintStart_toEndOf="@+id/textView_secret_comment"
                    app:layout_constraintTop_toTopOf="@+id/textView_secret_comment" />

                <ImageView
                    android:id="@+id/imageView_unfold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_scret_comment_count"
                    app:layout_constraintStart_toEndOf="@+id/textView_scret_comment_count"
                    app:layout_constraintTop_toTopOf="@+id/textView_scret_comment_count"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/ic_dropdown" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white">

        <android.widget.Button
            android:id="@+id/button_comment_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_comment_register_button"
            android:clickable="false"
            android:enabled="false"
            android:fontFamily="@font/nanum_barun_gothic"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_write_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/write_comment"
            android:paddingStart="21.1dp"
            android:textColor="@color/black"
            android:textColorHint="@color/c3gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_comment_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView_go_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/btn_goup" />


</androidx.constraintlayout.widget.ConstraintLayout>